Fixed margins and spacings

--- a/src/index.css
+++ b/src/index.css
@@ -703,7 +703,7 @@ footer {
 .section-wrapper {
   display: flex;
   flex-direction: column;
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
 }
 
 .section-heading {
@@ -723,7 +723,7 @@ footer {
 .proj-content-container {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
   margin-top: 1em;
 }
 
